--- a/index.html
+++ b/index.html
@@ -1,32 +1,81 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
-<meta charset="UTF-8">
-<meta data-hid="og:site_name" property="og:site_name" content="The Day That Never Ended: One Year Into August 4
-A Special Issue by The Public Source">
-<meta data-hid="og:type" property="og:type" content="website">
-<meta data-hid="twitter:site" name="twitter:site" content="@ThePublicSource">
-<meta data-hid="twitter:card" name="twitter:card" content="summary_large_image">
-<meta data-hid="twitter:creator" name="twitter:creator" content="@ThePublicSource">
-<meta data-hid="twitter:title" name="twitter:title" content="The Day That Never Ended: One Year Into August 4
-A Special Issue by The Public Source">
-<meta data-hid="twitter:description" name="twitter:description" content="The Day That Never Ended: One Year Into August 4
-A Special Issue by The Public Source">
-<meta data-hid="og:image" property="og:image" content="/aug4/preview.jpg">
-<meta data-hid="og:image:secure_url" property="og:image:secure_url" content="/aug4/preview.jpg">
-<meta data-hid="og:image:alt" property="og:image:alt" content="The Day That Never Ended: One Year Into August 4
-A Special Issue by The Public Source">
-<meta data-hid="twitter:image" name="twitter:image" content="/aug4/preview.jpg">
-<meta data-n-head="1" data-hid="description" name="description" content="One Year Into August 4
-A Special Issue by The Public Source">
-<meta data-n-head="1" name="viewport" content="width=device-width, initial-scale=1">
-<title>The Day That Never Ended | The Public Source</title>
-<link rel="Icon" href="https://thepublicsource.org/themes/custom/julia/components/images/favicons/favicon.ico">
+  <meta charset="UTF-8" />
+  <meta
+    data-hid="og:site_name"
+    property="og:site_name"
+    content="The Day That Never Ended: One Year Into August 4
+A Special Issue by The Public Source"
+  />
+  <meta data-hid="og:type" property="og:type" content="website" />
+  <meta
+    data-hid="twitter:site"
+    name="twitter:site"
+    content="@ThePublicSource"
+  />
+  <meta
+    data-hid="twitter:card"
+    name="twitter:card"
+    content="summary_large_image"
+  />
+  <meta
+    data-hid="twitter:creator"
+    name="twitter:creator"
+    content="@ThePublicSource"
+  />
+  <meta
+    data-hid="twitter:title"
+    name="twitter:title"
+    content="The Day That Never Ended: One Year Into August 4
+A Special Issue by The Public Source"
+  />
+  <meta
+    data-hid="twitter:description"
+    name="twitter:description"
+    content="The Day That Never Ended: One Year Into August 4
+A Special Issue by The Public Source"
+  />
+  <meta data-hid="og:image" property="og:image" content="/aug4/preview.jpg" />
+  <meta
+    data-hid="og:image:secure_url"
+    property="og:image:secure_url"
+    content="/aug4/preview.jpg"
+  />
+  <meta
+    data-hid="og:image:alt"
+    property="og:image:alt"
+    content="The Day That Never Ended: One Year Into August 4
+A Special Issue by The Public Source"
+  />
+  <meta
+    data-hid="twitter:image"
+    name="twitter:image"
+    content="/aug4/preview.jpg"
+  />
+  <meta
+    data-n-head="1"
+    data-hid="description"
+    name="description"
+    content="One Year Into August 4
+A Special Issue by The Public Source"
+  />
+  <meta
+    data-n-head="1"
+    name="viewport"
+    content="width=device-width, initial-scale=1"
+  />
+  <title>The Day That Never Ended | The Public Source</title>
+  <link
+    rel="Icon"
+    href="https://thepublicsource.org/themes/custom/julia/components/images/favicons/favicon.ico"
+  />
 
-<body>
+  <body>
+    <script
+      type="text/javascript"
+      src="http://code.jquery.com/jquery-1.4.2.min.js"
+    ></script>
 
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.4.2.min.js">
-</script>
-
-<script>
+    <!-- <script>
       //var vid = document.getElementById("video");
       //vid.onended = function() {
       //      window.open("http://google.com", "_self");
@@ -39,14 +88,30 @@ A Special Issue by The Public Source">
             location.href="https://thepublicsource.org/aug4/minerva.html";   
          }); 
         });
-      </script>
+      </script> -->
 
-<video id="video" height="100%" width="100%" autoplay controls muted>
-        <source src="aug4.webm" type="video/webm">
-        Sorry, your browser doesn't support embedded videos.
-</video>
+    <!-- <video id="video" height="100%" width="100%" autoplay controls muted>
+      <source src="aug4.webm" type="video/webm" />
+      Sorry, your browser doesn't support embedded videos.
+    </video> -->
 
-
-
-</body>
+    <script>
+      function redirect() {
+        document.location = 'minerva.html';
+      }
+    </script>
+    <video
+      id="video"
+      src="aug4.webm"
+      type="video/webm"
+      height="100%"
+      width="100%"
+      autoplay
+      controls
+      muted
+      onended="redirect()"
+    >
+      Sorry, your browser doesn't support embedded videos.
+    </video>
+  </body>
 </html>
