--- a/index.html
+++ b/index.html
@@ -75,42 +75,32 @@ A Special Issue by The Public Source"
       src="http://code.jquery.com/jquery-1.4.2.min.js"
     ></script>
 
-    <!-- <script>
+    <script>
       //var vid = document.getElementById("video");
       //vid.onended = function() {
       //      window.open("http://google.com", "_self");
       //};
-</script>
+    </script>
 
-<script type="text/javascript">
-        $(document).ready(function(){   
-         $("#video").bind('ended', function(){
-            location.href="https://thepublicsource.org/aug4/minerva.html";   
-         }); 
+    <script type="text/javascript">
+      $(document).ready(function () {
+        $('#video').bind('ended', function () {
+          location.href = 'minerva.html';
         });
-      </script> -->
+      });
+    </script>
 
-    <!-- <video id="video" height="100%" width="100%" autoplay controls muted>
+    <video id="video" height="100%" width="100%" autoplay controls muted>
       <source src="aug4.webm" type="video/webm" />
       Sorry, your browser doesn't support embedded videos.
-    </video> -->
+    </video>
 
     <script>
       function redirect() {
         document.location = 'minerva.html';
       }
     </script>
-    <video
-      id="video"
-      src="aug4.webm"
-      type="video/webm"
-      height="100%"
-      width="100%"
-      autoplay
-      controls
-      muted
-      onended="redirect()"
-    >
+    <video src="aug4.webm" onended="redirect()">
       Sorry, your browser doesn't support embedded videos.
     </video>
   </body>
