--- a/index3.html
+++ b/index3.html
@@ -77,6 +77,7 @@ A Special Issue by The Public Source"
 
     <script>
       function redirect() {
+        console.log('hello');
         document.location.href = 'minerva.html';
       }
     </script>
